manifests/web-app/sa-webapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sa-web-app
  labels:
    app: sa-web-app
spec:
  containers:
    - image: kevinedwards/sentiment-analysis-web-app:1.0.0
      imagePullPolicy: Always
      name: sa-logic
      ports:
        - containerPort: 5000
      resources:
        requests:
          cpu: 300m
          memory: 256Mi
        limits:
          cpu: 500m
          memory: 384Mi
