manifests/web-app/sa-web-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-ingress-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /sentiment
            pathType: Prefix
            backend:
              service:
                name: sa-web-app-lb
                port:
                  number: 80
